# tasksandboards

./: .gitignore  .isor.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
src/tasksandboards/: manage.py
src/tasksandboards/accounts/: backends.py  forms.py  models.py  urls.py  utilits.py  views.py
src/tasksandboards/accounts/migrations/: 0001_initial.py  0002_alter_accountuser_first_name_and_more.py
src/tasksandboards/boards/: forms.py  urls.py  views.py
src/tasksandboards/boards/migrations/: 0001_initial.py  0002_alter_kanban_description_alter_kanban_name_and_more.py
src/tasksandboards/boards/models/: __init__.py  base.py  kanban.py
src/tasksandboards/components/task_card/: task_card.css  task_card.html  task_card.js  task_card.py
src/tasksandboards/core/: views.py
src/tasksandboards/static/accounts/css/: login.css
src/tasksandboards/static/accounts/js/: otp_inputs.js
src/tasksandboards/static/boards/css/: create_board.css  create_kanban.css  kanban_mockup.css
src/tasksandboards/static/boards/js/: columns_widget.js
src/tasksandboards/static/core/css/: base.css  start_page.css
src/tasksandboards/static/core/js/: htmx.js
src/tasksandboards/tasks/: models.py  urls.py  views.py
src/tasksandboards/tasks/migrations/: 0001_initial.py
src/tasksandboards/tasksandboards/: asgi.py  settings.py  urls.py  wsgi.py
src/tasksandboards/templates/accounts/: confirm_signup.html  login.html  signin.html  signup.html  success_login.html
src/tasksandboards/templates/boards/: boards_list.html  columns_widget.html  create_board.html  create_kanban.html  kanban_mockup.html
src/tasksandboards/templates/core/: base.html  start_page.html  success.html
src/tasksandboards/templates/includes/: header.html
src/tasksandboards/templates/tasks/: task_card.html  tasks_list.html
tests/: test_accounts.py  test_accounts_views.py  test_boards.py
