[tool.poetry]
name = "tasksandboards"
version = "0.1.0"
description = "Tasks manager"
authors = ["artemklimov <grinchomsk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
Django = "4.2.16"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytils = "^0.4.1"
pre-commit = "3.4"
django-htmx = "^1.19.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
ipython = "8.12.3"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src/"
DJANGO_SETTINGS_MODULE = "tasksandboards.settings"
norecursedirs = "venv/*"
testpath = "tests/"


[tool.ruff]
fix = true
unsafe-fixes = true
show-fixes = true
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["D1", "D203", "D213", "FA102", "ANN101", "Q000", "RUF001"]

[tool.ruff.format]
quote-style = "single"


[tool.ruff.lint.isort]
lines-after-imports = 2
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = ["whole_app"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["ANN401", "S101", "S311", "ANN201"]
